# hyprmod

./: hatch_build.py  pyproject.toml
hyprmod/: _gi.py  window.py
hyprmod/binds/: override_state.py
hyprmod/core/: config.py  cursor_themes.py  profiles.py  setup.py  undo.py  xcursor.py
hyprmod/data/: bezier_data.py  com.github.hyprmod.gschema.xml
hyprmod/pages/: animations.py  cursor.py  settings.py
hyprmod/pages/monitors/: _page.py
hyprmod/ui/: bezier_editor.py  managed_row.py  options.py  sidebar.py  sources.py
tests/: test_binds.py  test_cursor.py
